--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="button-desc"></div>
             </a>
             
-            <a href="http://4vglo.work/a/615729?aiMA" class="promo-button button-4" target="_blank">
+            <a href="http://1206.pgzz.wse1l.com/a/626269?7pff" class="promo-button button-4" target="_blank">
                 <div class="button-title">白玫瑰</div>
                 <div class="button-desc"></div>
             </a>
@@ -262,4 +262,5 @@
 </body>
 
 </html>
+
 
