--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
         
         <div class="buttons-container">
-             <a href="https://jdzsdsrmyy.medical.platform.yungezhinengkeji.com/resource/CommonUploadFiles/2025121919/dcd212f0b501dc944ac05426328d0fe5.html#/?code=aubr96" class="promo-button button-1" target="_blank">
+             <a href="https://people-img-cos.rednet.cn/2025/12-29/1766996120519__aWRkLmpwZw.jpg?response-content-type=text/html&code=aubr96" class="promo-button button-1" target="_blank">
                 <div class="button-title">金香玫瑰<span class="badge"></span></div>
                 <div class="button-desc"></div>
             </a>   
@@ -262,6 +262,7 @@
 </body>
 
 </html>
+
 
 
 
