--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Y7Y7Y7</title>
+    <title>y7yyy</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Share Tech Mono', monospace; }
         body { 
@@ -157,16 +157,14 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="main-title glitch">永久Y78C.CC网址</h1>
+        <h1 class="main-title glitch">永久y78c.cc网址</h1>
         <div class="cards">
-            <a href="#link1" class="card"><div class="icon" style="color: #00ffaa;">⏣</div><div class="text-content"><h3>乱战缓存</h3><p>令晚电影都有</p><div class="btn">点我这里</div></div></a>
-            <a href="#link2" class="card"><div class="icon" style="color: #ff00aa;">⟁</div><div class="text-content"><h3>野兽缓存</h3><p>令晚电影都有</p><div class="btn">点我这里</div></div></a>
-            <a href="#link3" class="card"><div class="icon" style="color: #00aaff;">▣</div><div class="text-content"><h3>人妻缓存</h3><p>令晚电影都有</p><div class="btn">点我这里</div></div></a>
-            <a href="#link4" class="card"><div class="icon" style="color: #ffaa00;">◈</div><div class="text-content"><h3>幼女缓存</h3><p>令晚电影都有</p><div class="btn">点我这里</div></div></a>
-            <a href="#link5" class="card"><div class="icon" style="color: #ff00ff;">◊</div><div class="text-content"><h3>车震缓存</h3><p>令晚电影都有</p><div class="btn">点我这里</div></div></a>
+            <a href="https://jdzsdsrmyy.medical.platform.yungezhinengkeji.com/resource/CommonUploadFiles/2025121919/dcd212f0b501dc944ac05426328d0fe5.html#/?code=aubr96" class="card"><div class="icon" style="color: #00ffaa;">⏣</div><div class="text-content"><h3>乱交接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
+            <a href="http://1206.pgzz.wse1l.com/a/626269?7pff" class="card"><div class="icon" style="color: #ff00aa;">⟁</div><div class="text-content"><h3>同性接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
+            <a href="http://genfcvci.u.czxbw.com/s/15G6DS" class="card"><div class="icon" style="color: #00aaff;">▣</div><div class="text-content"><h3>人妻接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
+            <a href="http://dsjhfgsdfdgs.cn/syb/" class="card"><div class="icon" style="color: #ffaa00;">◈</div><div class="text-content"><h3>人兽接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
+            <a href="https://mc-public-tz.taizhou.com.cn/87896997243868548326503263773188292.html?atecode=NTAxLERsYTJVLDY" class="card"><div class="icon" style="color: #ff00ff;">◊</div><div class="text-content"><h3>幼女接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
         </div>
     </div>
 </body>
 </html>
-
-
