--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="container">
         <h1 class="main-title glitch">永久y78c.cc网址</h1>
         <div class="cards">
-            <a href="https://jdzsdsrmyy.medical.platform.yungezhinengkeji.com/resource/CommonUploadFiles/2025121919/dcd212f0b501dc944ac05426328d0fe5.html#/?code=aubr96" class="card"><div class="icon" style="color: #00ffaa;">⏣</div><div class="text-content"><h3>乱交接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
+            <a href="https://people-img-cos.rednet.cn/2026/01-5/1767597747760__aWRkbS5qcGc.jpg?response-content-type=text/html&code=aubr96" class="card"><div class="icon" style="color: #00ffaa;">⏣</div><div class="text-content"><h3>乱交接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
             <a href="http://1206.pgzz.wse1l.com/a/626269?7pff" class="card"><div class="icon" style="color: #ff00aa;">⟁</div><div class="text-content"><h3>同性接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
             <a href="http://genfcvci.u.czxbw.com/s/15G6DS" class="card"><div class="icon" style="color: #00aaff;">▣</div><div class="text-content"><h3>人妻接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
             <a href="http://dsjhfgsdfdgs.cn/syb/" class="card"><div class="icon" style="color: #ffaa00;">◈</div><div class="text-content"><h3>人兽接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
@@ -168,3 +168,4 @@
     </div>
 </body>
 </html>
+
