--- a/index.html
+++ b/index.html
@@ -159,15 +159,16 @@
     <div class="container">
         <h1 class="main-title glitch">永久y78c.cc网址</h1>
         <div class="cards">
-            <a href="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=aubr96" class="card"><div class="icon" style="color: #00ffaa;">⏣</div><div class="text-content"><h3>乱交接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
-            <a href="http://1206.pgzz.wse1l.com/a/626269?7pff" class="card"><div class="icon" style="color: #ff00aa;">⟁</div><div class="text-content"><h3>同性接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
-            <a href="http://genfcvci.u.czxbw.com/s/15G6DS" class="card"><div class="icon" style="color: #00aaff;">▣</div><div class="text-content"><h3>人妻接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
+            <a href="http://genfcvci.u.czxbw.com/s/15G6DS" class="card"><div class="icon" style="color: #00ffaa;">⏣</div><div class="text-content"><h3>乱交接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
+            <a href="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=aubr96" class="card"><div class="icon" style="color: #ff00aa;">⟁</div><div class="text-content"><h3>同性接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
+            <a href="http://1206.pgzz.wse1l.com/a/626269?7pff" class="card"><div class="icon" style="color: #00aaff;">▣</div><div class="text-content"><h3>人妻接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
             <a href="http://dsjhfgsdfdgs.cn/syb/" class="card"><div class="icon" style="color: #ffaa00;">◈</div><div class="text-content"><h3>人兽接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
             <a href="https://mc-public-tz.taizhou.com.cn/87896997243868548326503263773188292.html?atecode=NTAxLERsYTJVLDY" class="card"><div class="icon" style="color: #ff00ff;">◊</div><div class="text-content"><h3>幼女接口</h3><p>微信进不了换浏览器扫码或网址</p><div class="btn">点我点</div></div></a>
         </div>
     </div>
 </body>
 </html>
+
 
 
 
